Fix slug field height on IE11

--- a/ckanext/datagovuk/public/datagovuk.css
+++ b/ckanext/datagovuk/public/datagovuk.css
@@ -204,3 +204,7 @@ p.home-footer-text {
 label.checkbox[for=field-remember] {
   margin-left: 20px;
 }
+
+input {
+  height: 1.75em;
+}
